# SocialMonitor

./: .gitignore  README.md  build_exe.py  config.example.yaml  pyproject.toml
src/social_monitor/: __init__.py  __main__.py  app.py  config.py  database.py  models.py  notifier.py  poller.py  scorer.py
src/social_monitor/sources/: __init__.py  base.py  discord_bot.py  gearspace.py  kvr_audio.py  reddit.py  rss_feed.py  stackoverflow.py
src/social_monitor/ui/: log_viewer.py  main_window.py  settings_dialog.py  signals.py  tray.py  widgets.py
tests/: conftest.py
